--- a/package.json
+++ b/package.json
@@ -2,8 +2,11 @@
   "name": "whtasapp_automation",
   "version": "1.0.0",
   "main": "index.ts",
+  "engines": {
+    "node": ">20"
+  },
   "scripts": {
-    "tsc": "tsc",
+    "build": "tsc",
     "start": "node dist/index.js",
     "dev": "ts-node-dev src/index.ts"
   },
@@ -12,12 +15,14 @@
   "license": "ISC",
   "description": "",
   "devDependencies": {
+    "@types/express": "^5.0.0",
     "@types/node": "^22.7.4",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.6.2"
   },
   "dependencies": {
     "@whiskeysockets/baileys": "^6.7.8",
+    "express": "^4.21.1",
     "qrcode-terminal": "^0.12.0",
     "shopify-api-node": "^3.14.0"
   }
