--- a/package.json
+++ b/package.json
@@ -17,13 +17,16 @@
   "devDependencies": {
     "@types/express": "^5.0.0",
     "@types/node": "^22.7.4",
+    "@types/qrcode": "^1.5.5",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.6.2"
   },
   "dependencies": {
     "@whiskeysockets/baileys": "^6.7.8",
     "express": "^4.21.1",
+    "qrcode": "^1.5.4",
     "qrcode-terminal": "^0.12.0",
-    "shopify-api-node": "^3.14.0"
+    "shopify-api-node": "^3.14.0",
+    "socket.io": "^4.8.0"
   }
 }
