[fix]: Refactor to use host depending environment and adding volume in container to save auth dir

--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,8 @@
+NODE_ENV = development
+HOST = http://localhost:3000
+PORT = 3000
 SHOPIFY_SHOP_NAME
 SHOPIFY_PASSWROD
 SHOPIFY_API_KEY
 SHOPIFY_API_SECRET_KEY
-GROUP_ID
+GROUP_ID = ***********@g.us
