--- a/fly.toml
+++ b/fly.toml
@@ -20,3 +20,7 @@ primary_region = 'bog'
   memory = '1gb'
   cpu_kind = 'shared'
   cpus = 1
+
+[mounts]
+  source = "auth_volume"
+  destination = "/app/auth"
