--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   "scripts": {
     "build": "tsc",
     "start": "node dist/index.js",
+    "start:prod": "prisma migrate deploy && npm run start",
     "dev": "ts-node-dev src/index.ts"
   },
   "keywords": [],
@@ -17,13 +18,17 @@
   "devDependencies": {
     "@types/express": "^5.0.0",
     "@types/node": "^22.7.4",
+    "@types/node-cron": "^3.0.11",
     "@types/qrcode": "^1.5.5",
+    "prisma": "^5.21.1",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.6.2"
   },
   "dependencies": {
+    "@prisma/client": "^5.21.1",
     "@whiskeysockets/baileys": "^6.7.8",
     "express": "^4.21.1",
+    "node-cron": "^3.0.3",
     "qrcode": "^1.5.4",
     "qrcode-terminal": "^0.12.0",
     "shopify-api-node": "^3.14.0",
