--- a/.env.example
+++ b/.env.example
@@ -6,4 +6,6 @@ SHOPIFY_PASSWROD
 SHOPIFY_API_KEY
 SHOPIFY_API_SECRET_KEY
 GROUP_ID = ***********@g.us
-DATABASE_URL= "file:../database/database.db"
+DATABASE_URL= "file:../persistent_volume/database/database.db"
+LINE_1_TO_PRODUCT_CREATION = "573000000000"
+LINE_2_TO_PRODUCT_CREATION = "573000000001"
