--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@prisma/client": "^5.21.1",
     "@whiskeysockets/baileys": "^6.7.8",
     "express": "^4.21.1",
+    "moment-timezone": "^0.5.46",
     "node-cron": "^3.0.3",
     "qrcode": "^1.5.4",
     "qrcode-terminal": "^0.12.0",
